--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "axios": "^0.21.1",
+    "date-fns": "^2.19.0",
+    "gray-matter": "^4.0.2",
+    "next": "10.0.4",
+    "next-themes": "^0.0.14",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "swr": "^0.5.5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "autoprefixer": "^10.2.0",
+    "postcss": "^8.2.2",
+    "postcss-import": "^14.0.0",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
   }
 }
